Best displaying and checking all the pixels working in the tft.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,13 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+upload_speed = 921600
+
+monitor_speed = 115200
+
+lib_deps =
+	https://github.com/adafruit/Adafruit-GFX-Library.git
+    https://github.com/adafruit/Adafruit_ILI9341.git
+    https://github.com/adafruit/Adafruit_BusIO.git
+    https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
